style.css
li {
  list-style: none;
}

body {
  display: flex;
  flex-direction: column;
}

* {
  margin: 0;
  padding: 0;
  text-decoration: none;
}

nav {
  display: flex;
  background-color: #3c3a39;
  justify-content: space-between;
  font-size: 24px;
  padding: 10px;
}

section {
  display: flex;
  padding: 24px;
  flex-direction: column;
  height: 100vh;
}

.iconitems {
  display: inline-block;
}

form {
  border: none;
  background-color: transparent;
  resize: none;
  outline: none;
  display: flex;
  flex-direction: column;
  text-align: center;
  justify-content: center;
}

#logonav {
  color: #fff;
  font-family: 'Roboto', sans-serif;
  width: 180px;
  text-shadow: 3px 2px 1px #000;
  padding-left: 12px;
}

#menuimg {
  -webkit-filter: invert(100%);
  height: 2rem;
  width: 2rem;
  padding-right: 12px;
  letter-spacing: 0.37px;
}

.headline {
  color: #ff6b00;
  font-family: 'Crete Round', serif;
  font-size: 64px;
  letter-spacing: 2px;
  padding: 6px;
  transition: 0.7s ease;
}

.headline:hover {
  color: #fff;
}

.fullmenu {
  display: none;
  cursor: pointer;
  color: #ccc;
}

.subheadline {
  color: #fff5e1;
  font-family: 'Roboto', sans-serif;
  font-size: 24px;
  font-weight: 700;
  padding: 6px;
  transition: 0.7s ease;
}

.subheadline:hover {
  color: #ff6b00;
}

.headlinetext {
  font-size: 16px;
  font-weight: 400;
  color: #fff;
  font-family: 'Poppins', sans-serif;
  text-shadow: (0, 0, 0, 0.25);
  line-height: 24px;
  padding: 6px;
}

.icons {
  text-align: left;
  justify-content: space-between;
}

.blackorange {
  background-image: url("./img/mobil.background.png");
  background-repeat: no-repeat;
  background-position: right bottom;
  background-color: #1c1a19;
  background-size: 15vh;
  justify-content: center;
  width: 90vw;
}

.aboutme {
  background-image: url("./img/aboutme.png");
  background-repeat: no-repeat;
  background-position: right bottom;
  background-color: #1c1a19;
  background-size: 30vh;
  justify-content: center;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 0;
  overflow: auto;
  width: 100vw;
  height: auto;
}

.orange {
  color: #fff;
  background-color: #ff6b00;
  font-family: 'Inter', sans-serif;
  font-size: 17px;
  font-weight: 700;
  padding: 10px 20px 10px 12px;
  border: none;
  justify-content: center;
  text-align: center;
}

.light {
  /* color: #091e42; */
  color: #091e42;
  border: #8993a4 1px solid;
  padding: 10px 12px 10px 12px;
  font-family: 'Inter', sans-serif;
}

.smoke {
  border: #8993a4 1px solid;
  color: #fbf8f7;
  padding: 10px 12px 10px 12px;
  font-family: 'Inter', sans-serif;
  background-color: rgba(255, 255, 255, 0.3);
}

#texttitle {
  font-family: 'Crete Round', serif;
  color: #1c1a19;
  font-size: 52px;
  font-weight: 200;
  padding: 25px 10px 50px 0;
  border-bottom: #212121 1px solid;
  margin-bottom: 50px;
}

.mywork {
  padding: 30px;
  height: auto;
  display: flex;
  justify-content: flex-end;
  align-items: stretch;
}

.projects {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 0;
  margin: 0;
}

#imageindex {
  width: 450px;
  height: 350px;
  padding: 0 10% 0 10%;
}

#textsubtitle {
  font-family: 'Crete Round', serif;
  font-size: 32px;
  font-weight: 200;
  letter-spacing: 0.14rem;
  color: #091e42;
  padding: 20px 50px 20px 0;
}

#textparagraph {
  font-family: 'Inter', sans-serif;
  text-align: left;
  padding: 20px 50px 20px 0;
  color: #091e42;
  letter-spacing: 2px;
  line-height: 1.8;
}

.buttonsmywork {
  display: grid;
  grid-gap: 15px;
  grid-template-columns: 55px 0.15fr 0.15fr 0.15fr;
  grid-template-rows: 40px;
}

.card {
  display: flex;
  flex-direction: column;
  align-items: left;
  background-image: url("./img/card.background.png"), linear-gradient(#3c3a39 20%, #1c1a19);
  background-repeat: no-repeat;
  background-size: cover;
  padding: 20px;
  height: 500px;
  color: rgba(255, 255, 255, 1);
}

.seeproject {
  display: grid;
  grid-template-columns: 0.25fr 0.15fr 0.2fr 0.2fr;
  grid-template-rows: 40px;
  grid-gap: 10px;
}

.projecttitle {
  font-family: 'Crete Round', serif;
  font-size: 44px;
  font-weight: 200;
  letter-spacing: 0.14rem;
  padding: 20px 50px 20px 0;
}

.projecttext {
  font-family: 'Inter', sans-serif;
  text-align: left;
  padding: 20px 50px 20px 0;
  letter-spacing: 2px;
  line-height: 1.8;
  font-weight: 200;
}

.buttonsproject {
  display: grid;
  grid-gap: 15px;
  grid-template-columns: 0.15fr 0.2fr 0.2fr 0.2fr;
  grid-template-rows: 50px;
}

.cardbottom {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr;
  cursor: pointer;
}

.orangebottom {
  color: #fff;
  background-color: #ff6b00;
  font-family: 'Inter', sans-serif;
  font-size: 17px;
  font-weight: 700;
  padding: 10px 20px 10px 12px;
  border: none;
  justify-content: center;
  grid-column: 1 / -1;
}

.cards {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: 1fr;
  grid-auto-flow: row;
  height: fit-content;
  padding: 5vh 1vw 5vh 1vw;
}

.language {
  background-color: #1c1a19;
  display: flex;
  height: auto;
  flex-direction: column;
  align-items: center;
  width: 100vw;
}

.skills {
  color: #fff;
  font-size: 55px;
  font-family: 'Inter', sans-serif;
  display: grid;
  grid-template-columns: 50px 1fr;
  padding-top: 25px;
  padding-bottom: 35px;
  margin-right: 10px;
  margin-left: 10px;
}

.skillstitle {
  order: -1;
}

.skills-img {
  order: -2;
  padding: 25px 0 0 0;
}

.skilllistcontainer {
  order: -1;
  padding: 0;
  margin: 0;
}

.skillitem {
  font-size: 30px;
  font-family: 'Crete Round', serif;
  justify-content: center;
  color: rgb(255, 255, 255);
  padding: 0 0 0 125px;
}

.skillitem2 li {
  font-size: 30px;
  font-family: 'Crete Round', serif;
  justify-content: center;
  align-items: center;
  color: #fff;
  padding: 0 0 0 150px;
}

.skillitem3 li {
  font-size: 30px;
  font-family: 'Crete Round', serif;
  justify-content: center;
  color: #fff;
  padding: 0 0 0 40px;
}

.contactme {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 30px;
  margin: 1vh;
}

.contactinput {
  border-style: hidden;
  border-bottom: solid 1px #ccc;
  background-color: rgb(255, 255, 255);
  padding-top: 25px;
  margin-top: 30px;
  text-indent: 20px;
  padding-bottom: 20px;
}

input:focus {
  border: none;
}

::placeholder {
  font-size: 15px;
}

textarea {
  border-top-style: hidden;
  border-right-style: hidden;
  border-left-style: hidden;
  border-bottom-style: hidden;
  color: rgb(0, 0, 0);
  background-color: #fbf8f7;
  margin-top: 50px;
  text-indent: 20px;
  font-size: 20px;
  padding-top: 25px;
}

#formtitle {
  font-size: 30px;
  font-family: 'Crete Round', serif;
  text-align: center;
  color: #172b4d;
  padding: 90vh 0 0 0;
}

textarea:hover {
  background-color: #ccc;
}

#footericons {
  -webkit-filter: invert(60%);
  padding: 40px;
  display: flex;
}

#getintouch {
  width: 50vw;
  color: #fff;
  background-color: #ff6b00;
  font-family: 'Inter', sans-serif;
  font-size: 25px;
  margin: 20px 15vw 20px 15vw;
  padding: 15px 10px 15px 10px;
  border: none;
  cursor: pointer;
  z-index: 500;
}

#getintouch:focus {
  background-color: #a14300;
}

@media screen and (min-width: 768px) {
  nav {
    display: flex;
    height: 2rem;
  }

  #logonav {
    padding-left: 8vw;
  }

  .menuitem {
    padding: 1vw;
  }

  #menuimg {
    display: none;
  }

  .fullmenu {
    display: flex;
    cursor: pointer;
    color: #fff;
    align-items: center;
    justify-content: center;
    align-content: space-between;
    font-family: 'Inter', sans-serif;
    font-size: 17px;
  }

  #envelope {
    font-size: 21px;
    padding-right: 8vw;
  }

  .blackorange {
    background-image: url("./img/desktop.background.png");
    background-repeat: no-repeat;
    background-position: right bottom;
    background-color: #1c1a19;
    background-size: 30vw;
    display: flex;
    flex-direction: row;
    justify-content: initial;
    align-items: center;
  }

  #texttitle {
    font-family: 'Crete Round', serif;
    color: #1c1a19;
    font-size: 52px;
    font-weight: 200;
    padding: 25px 10px 50px 0;
    border-bottom: #212121 1px solid;
    margin-bottom: 50px;
  }

  .icons {
    order: -1;
    margin: 0 1vw 0 1vw;
  }

  #welcometext {
    width: 40%;
    margin: 0 1vw 0 1vw;
  }

  .iconitems {
    display: list-item;
  }

  .cards {
    display: grid;
    width: 95vw;
    grid-gap: 20px;
    align-items: initial;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr;
    grid-auto-flow: row;
    padding: 30px;
    height: auto;
  }

  .card {
    height: auto;
    background: linear-gradient(0deg, rgb(53, 53, 53) 0%, rgba(200, 200, 200, 0.5) 100%) url("./img/img.background.cards.png");
    background-repeat: no-repeat;
  }

  .smoke {
    visibility: show;
  }

  .card:hover {
    background: url("./img/img.background.cards.png");
    color: rgba(255, 255, 255, 0);
    transition: 0.7s ease-in-out;
  }

  .card:hover > :nth-child(3) {
    visibility: hidden;
    background-color: #000;
  }

  .card .cardbottom {
    opacity: 0;
  }

  .card:hover > .cardbottom {
    opacity: 100;
    transition: 0.7s ease-in-out;
  }

  .mywork {
    width: 95vw;
    padding: 15px;
    height: auto;
    display: flex;
    flex-direction: column;
    align-items: stretch;
  }

  #imageindex {
    min-width: 600px;
    width: 1fr;
    height: auto;
    padding-right: 15px;
  }

  .aboutme {
    background-image: url("./img/img.background.aboutme.png");
    background-position: right;
    background-size: 100vh;
    justify-content: center;
    border-bottom: #fff 1px solid;
    width: 95vw;
    padding: 15px;
  }

  .language {
    display: flex;
    height: 100vh;
    flex-direction: row;
    align-items: flex-start;
    justify-content: space-between;
    width: 93.5vw;
    padding: 25px;
  }

  .skillstitle {
    display: flex;
    align-items: center;
    padding: 20px;
  }

  .skillstitle h2 {
    font-size: 40px;
  }

  .skills-img {
    width: 20px;
    height: 20px;
    padding-bottom: 25px;
  }

  .skills {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
  }

  .skillitem3 li {
    font-size: 20px;
  }

  #textaboutme {
    max-width: 512px;
  }

  #myworktext {
    display: flex;
    flex-direction: column;
    border: #000;
  }

  #worksdesktop {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }

  #textsubtitle {
    margin-left: 15px;
  }

  #textparagraph {
    margin-left: 15px;
  }

  .buttonsmywork {
    display: flex;
    margin: 15px;
  }

  .orange {
    margin-left: 15px;
    font-size: 17px;
    border: none;
    justify-content: center;
    text-align: center;
    padding: 10px 10px 10px 10px;
  }

  .containercontact {
    margin-top: 300px;
    display: flex;
    flex-direction: row;
    width: 70vw;
  }

  #formtitle {
    padding: 0 0 0 0;
    min-width: 49%;
    font-size: 55px;
    text-align: left;
    padding-right: 15px;
    max-height: 50vh;
  }

  #contactform {
    padding-left: 15px;
    max-width: 49%;
    min-width: 49%;
    display: flex;
    flex-direction: column;
  }

  #inputname {
    margin-top: initial;
  }

  #getintouch {
    width: 50vw;
    font-size: 25px;
    margin: initial;
    padding: 15px 10px 15px 10px;
    border: none;
    cursor: pointer;
    z-index: 500;
    max-width: 200px;
    align-items: stretch;
    margin-top: 30px;
  }
}

